--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 lib_deps = 
 	baldram/ESP_VS1053_Library@^1.1.4
 	bblanchon/ArduinoJson@^6.21.3
-	rlogiacco/CircularBuffer@^1.3.3	
+	rlogiacco/CircularBuffer@^1.3.3
 	olikraus/U8g2@^2.35.4
+	igorantolic/Ai Esp32 Rotary Encoder@^1.6
 monitor_speed = 115200
