--- a/platformio.ini
+++ b/platformio.ini
@@ -18,4 +18,5 @@ lib_deps =
 	rlogiacco/CircularBuffer@^1.3.3
 	olikraus/U8g2@^2.35.4
 	igorantolic/Ai Esp32 Rotary Encoder@^1.6
+	z3t0/IRremote@^4.2.0
 monitor_speed = 115200
